--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tonic = "0.11"
 prost = "0.12"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 tonic-reflection = "0.11.0"
+tokio-stream = "0.1.14"
 
 [build-dependencies]
 tonic-build = "0.11"
